src/test/ui/suggestions/type-ascription-instead-of-variant.rs
fn main() {
    let _ = Option:Some("");
    //~^ ERROR expected type, found
}
